--- a/package.json
+++ b/package.json
@@ -1,35 +1,18 @@
 {
   "name": "naxilon-backend",
   "version": "1.0.0",
-  "description": "Naxilon Backend API for Contact Form with IONOS SMTP",
+  "description": "Naxilon Backend API",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "node app.js",
-    "test": "echo \"No tests specified\" && exit 0"
+    "dev": "node app.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "nodemailer": "^6.9.7",
-    "dotenv": "^16.3.1"
+    "nodemailer": "^6.9.7"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
-  },
-  "keywords": [
-    "naxilon",
-    "backend",
-    "api",
-    "contact-form",
-    "ionos",
-    "smtp"
-  ],
-  "author": "Naxilon Team",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/naxilon/naxilon-backend"
+    "node": ">=16.0.0"
   }
 }
